[tool.poetry]
name = "assignment3"
version = "0.1.0"
description = ""
authors = ["Ritam Mukherjee <ritammukherjee1699@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymysql = "^1.1.1"
mysqlclient = "^2.2.4"
sqlalchemy-utils = "^0.41.2"
sqlalchemy-celery-beat = "^0.7.1"
redis = "^5.0.4"
hiredis = "^2.3.2"
flask-login = "^0.6.3"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
flask-sqlalchemy = "^3.1.1"
requests = "^2.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
